--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "url": "http://adlawson.com"
   },
 
+  "bin": {
+    "wesley": "./bin/wesley"
+  },
+
   "dependencies": {
+    "colors": "~0.6.0",
+    "commander": "~1.1.1",
     "ws": "~0.4.25"
   },
   "devDependencies": {
