--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "wesley": "./bin/wesley"
   },
 
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adlawson/wesley.git"
+  },
+
   "dependencies": {
     "colors": "~0.6.0",
     "commander": "~1.1.1",
