--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wesley",
   "description": "Protocol compliant web socket server with some awesome extras.",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "homepage": "http://wesleyjs.org",
 
   "keywords": [
@@ -36,6 +36,6 @@
   },
   "devDependencies": {
     "chai": "~1.5.0",
-    "mocha": "~1.8.1",
+    "mocha": "~1.8.1"
   }
 }
