--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "colors": "~0.6.0",
     "commander": "~1.1.1",
+    "eventemitter2": "~0.4.11",
     "ws": "~0.4.25"
   },
   "devDependencies": {
